# OtterEngine

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
3ds/include/: Interface.hpp
audio/: AudioSampler.hpp  MidiFile.hpp  PianoKeys.hpp  SoundManager.hpp  SoundMixer.hpp  Synthesizers.hpp  UnitTimer.hpp  WavFile.hpp
audio/include/: AudioSampler.hpp  MidiFile.hpp  SoundBuffer.hpp  SoundManager.hpp  SoundMixer.hpp  Synthesizers.hpp  UnitTimer.hpp  WavFile.hpp
audio/source/: AudioSampler.cpp  CMakeLists.txt  MidiFile.cpp  PianoKeys.cpp  SoundBuffer.cpp  SoundManager.cpp  SoundMixer.cpp  Synthesizers.cpp  WavFile.cpp
cmake/modules/: FindGLEW_Win.cmake  FindGLFW3.cmake  FindPortAudio.cmake  FindSOIL.cmake  PreRequisites.cmake
core/: OTTConfigFile.hpp  OTTFrameTimer.hpp  OTTHighResTimer.hpp  OTTStringOps.hpp  OTTSystem.hpp  OTTTextParser.hpp
core/source/: CMakeLists.txt  OTTConfigFile.cpp  OTTFrameTimer.cpp  OTTHighResTimer.cpp  OTTStringOps.cpp  OTTSystem.cpp  OTTTextParser.cpp
graphics/: GraphicsSDL.hpp
graphics/3d/: OTTCamera.hpp  OTTLightSource.hpp  OTTPlayer.hpp  OTTScene.hpp  OTTShader3d.hpp  OTTWindow3d.hpp
graphics/3d/source/: CMakeLists.txt  OTTCamera.cpp  OTTLightSource.cpp  OTTPlayer.cpp  OTTScene.cpp  OTTShader3d.cpp  OTTWindow3d.cpp
graphics/app/: OTTApplication.hpp  OTTCharacterMap.hpp  OTTConsole.hpp  OTTString.hpp
graphics/app/source/: CMakeLists.txt  OTTApplication.cpp  OTTCharacterMap.cpp  OTTConsole.cpp  OTTString.cpp
graphics/core/: OTTColor.hpp  OTTImageBuffer.hpp  OTTLogicalColor.hpp  OTTShader.hpp  OTTWindow.hpp
graphics/core/source/: CMakeLists.txt  OTTColor.cpp  OTTImageBuffer.cpp  OTTLogicalColor.cpp  OTTShader.cpp  OTTWindow.cpp
graphics/geometry/: OTTModel.hpp  OTTModel3ds.hpp  OTTModelObj.hpp  OTTModelStl.hpp  OTTObject.hpp  OTTPixelTriplet.hpp  OTTPlane.hpp  OTTPolygon.hpp  OTTPolygonContainer.hpp  OTTPrimitives.hpp  OTTRay.hpp  OTTVertex.hpp  OTTVertexContainer.hpp
graphics/geometry/source/: CMakeLists.txt  OTTModel.cpp  OTTModel3ds.cpp  OTTModelObj.cpp  OTTModelStl.cpp  OTTObject.cpp  OTTPixelTriplet.cpp  OTTPlane.cpp  OTTPolygon.cpp  OTTPolygonContainer.cpp  OTTPrimitives.cpp  OTTRay.cpp  OTTVertex.cpp  OTTVertexContainer.cpp
graphics/include/: ColorRGB.hpp  Graphics.hpp  GraphicsOpenGL.hpp  LogicalColor.hpp  OTTApplication.hpp  OTTBitmap.hpp  OTTCharacterMap.hpp  OTTConfigFile.hpp  OTTConsole.hpp  OTTFrameTimer.hpp  OTTHighResTimer.hpp  OTTImageBuffer.hpp  OTTJoypad.hpp  OTTKeyboard.hpp  OTTLogicalColor.hpp  OTTMouse.hpp  OTTShader.hpp  OTTSprite.hpp  OTTSpriteSet.hpp  OTTString.hpp  OTTSystem.hpp  OTTTextParser.hpp  OTTTexture.hpp  OTTWindow.hpp  colors.hpp
graphics/source/: CMakeLists.txt  ColorRGB.cpp  GraphicsOpenGL.cpp  LogicalColor.cpp  OTTApplication.cpp  OTTBitmap.cpp  OTTCharacterMap.cpp  OTTConfigFile.cpp  OTTConsole.cpp  OTTFrameTimer.cpp  OTTHighResTimer.cpp  OTTImageBuffer.cpp  OTTJoypad.cpp  OTTKeyboard.cpp  OTTLogicalColor.cpp  OTTMouse.cpp  OTTShader.cpp  OTTSprite.cpp  OTTSpriteSet.cpp  OTTString.cpp  OTTSystem.cpp  OTTTextParser.cpp  OTTTexture.cpp  OTTWindow.cpp  OTTWindow3D.cpp  colors.cpp
graphics/texture/: OTTBitmap.hpp  OTTImage.hpp  OTTSprite.hpp  OTTSpriteSet.hpp  OTTTexture.hpp  OTTTextureManager.hpp
graphics/texture/source/: CMakeLists.txt  OTTBitmap.cpp  OTTImage.cpp  OTTSprite.cpp  OTTSpriteSet.cpp  OTTTexture.cpp  OTTTextureManager.cpp
gui/: OTTGuiButton.hpp  OTTGuiCheckbox.hpp  OTTGuiContainer.hpp  OTTGuiElement.hpp  OTTGuiFrame.hpp  OTTGuiGroup.hpp  OTTGuiRadioButton.hpp  OTTGuiSlider.hpp
gui/include/: OTTGuiButton.hpp  OTTGuiCheckbox.hpp  OTTGuiContainer.hpp  OTTGuiElement.hpp  OTTGuiFrame.hpp  OTTGuiRadioButton.hpp  OTTGuiSlider.hpp
gui/source/: CMakeLists.txt  OTTGuiButton.cpp  OTTGuiCheckbox.cpp  OTTGuiContainer.cpp  OTTGuiElement.cpp  OTTGuiFrame.cpp  OTTGuiRadioButton.cpp  OTTGuiSlider.cpp
include/: Globals.hpp  Model.hpp  Model3ds.hpp  ModelObj.hpp  ModelStl.hpp  OTTPlayer.hpp  OTTShader.hpp  OTTShader3D.hpp  OTTTextureManager.hpp  OTTWindow3D.hpp  PixelTriplet.hpp  PolygonContainer.hpp  Primitives.hpp  Shader.hpp  Sprite.hpp  StlObject.hpp  Texture.hpp  Vertex.hpp  VertexContainer.hpp  ZBuffer.hpp  camera.hpp  colors.hpp  cube.hpp  lightSource.hpp  matrix2.hpp  matrix3.hpp  object.hpp  plane.hpp  quad.hpp  ray.hpp  scene.hpp  sdlWindow.hpp  triangle.hpp  vector2.hpp  vector3.hpp
input/: OTTAnalogStick.hpp  OTTGamepad.hpp  OTTJoypad.hpp  OTTKeyboard.hpp  OTTMouse.hpp
input/source/: CMakeLists.txt  OTTAnalogStick.cpp  OTTGamepad.cpp  OTTJoypad.cpp  OTTKeyboard.cpp  OTTMouse.cpp
math/: OTTConstants.hpp  OTTDecayEnvelope.hpp  OTTMatrix.hpp  OTTMovingAverage.hpp  OTTRandom.hpp  OTTVector.hpp  OTTWrappedValue.hpp
math/include/: Constants.hpp  DecayEnvelope.hpp  Matrix.hpp  MovingAverage.hpp  OTTRandom.hpp  Vector.hpp  WrappedValue.hpp
math/source/: CMakeLists.txt  DecayEnvelope.cpp  Matrix.cpp  MovingAverage.cpp  OTTConstants.cpp  OTTDecayEnvelope.cpp  OTTMatrix.cpp  OTTMovingAverage.cpp  OTTRandom.cpp  OTTVector.cpp  OTTWrappedValue.cpp  Vector.cpp  WrappedValue.cpp
shaders/fragment/: default.frag  normal.frag  zdepth.frag
shaders/vertex/: default.vert  normal.vert  zdepth.vert
share/: OtterConfig.cmake.in
source/: CMakeLists.txt  Model.cpp  Model3ds.cpp  ModelObj.cpp  ModelStl.cpp  OTTPlayer.cpp  OTTShader.cpp  OTTShader3D.cpp  OTTTextureManager.cpp  OTTWindow3D.cpp  PixelTriplet.cpp  PolygonContainer.cpp  Primitives.cpp  Shader.cpp  Sprite.cpp  StlObject.cpp  Texture.cpp  Vertex.cpp  VertexContainer.cpp  ZBuffer.cpp  camera.cpp  colors.cpp  cube.cpp  lightSource.cpp  matrix2.cpp  matrix3.cpp  object.cpp  plane.cpp  ray.cpp  renderer.cpp  scene.cpp  sdlWindow.cpp  triangle.cpp  vector2.cpp  vector3.cpp
tests/source/: CMakeLists.txt  animtest.cpp  apptest.cpp  consoletest.cpp  guitest.cpp  randtest.cpp  renderer.cpp  stringtest.cpp  synthtest.cpp
tools/include/: VersionNumber.hpp
tools/source/: CMakeLists.txt  VersionNumber.cpp  glVersionFinder.cpp
